Added weather icons from API and funny prescriptions!

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         </form>
         <br />
         <h1>
-          <span class="emoji" id="emoji-h1">☀</span
+          <span class="icon"> <img src="" alt="" id="icon-h1" /></span
           ><span class="h1" id="h1-heading"></span>
           <span class="units">
             <span class="celsius"> <a href="#">°C</a></span
@@ -68,10 +68,10 @@
           </div>
         </div>
         <br />
-        <p>
-          🕶<br />
-          Don't forget your sunglasses
-        </p>
+
+        <div class="emoji" id="emoji-fun"></div>
+        <div class="prescription" id="funny-prescription"></div>
+
         <br />
         <div class="future">
           <div class="row">
