Added unit conversion

--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
           <span class="icon"> <img src="" alt="" id="icon-h1" /></span
           ><span class="h1" id="h1-heading"></span>
           <span class="units">
-            <span class="celsius"> <a href="#">°C</a></span
-            >|<span class="fahrenheit"><a href="#">°F</a></span></span
+            <span id="celsius"> <a href="#" class="active">°C</a></span
+            >|<span id="fahrenheit"><a href="#">°F</a></span></span
           >
         </h1>
         <br />
