Solved the problem in HTML

--- a/index.html
+++ b/index.html
@@ -46,9 +46,12 @@
           <span class="icon"> <img src="" alt="" id="icon-h1" /></span
           ><span class="h1" id="h1-heading"></span>
           <span class="units">
-            <span id="celsius"> <a href="#" class="active">°C</a></span
-            >|<span id="fahrenheit"><a href="#">°F</a></span></span
-          >
+            <a href="#" id="celsius" class="active">°C</a>|<a
+              href="#"
+              id="fahrenheit"
+              >°F</a
+            >
+          </span>
         </h1>
         <br />
         <div class="info">
