forecast HTML and CSS

--- a/index.html
+++ b/index.html
@@ -88,44 +88,31 @@
 
         <br />
         <div class="future">
-          <div class="row">
-            <div class="col-3">
-              Thu
-              <br />
-              ☁
-              <br />
-              7°
-            </div>
-            <div class="col-3">
-              Wed
-              <br />
-              🌧
-              <br />
-              6°
-            </div>
-            <div class="col-3">
-              Sat
-              <br />
-              ⛅
-              <br />
-              10°
-            </div>
-            <div class="col-3">
-              Sun
-              <br />
-              ❄
-              <br />
-              1°
+          <div class="weather-forecast">
+            <div class="row">
+              <div class="col-2">
+                <div class="weather-forecast-date">Thu</div>
+                <img
+                  src="http://openweathermap.org/img/wn/50d@2x.png"
+                  alt=""
+                  width="42"
+                />
+                <div class="weather-forecast-temperatures">
+                  <span class="weather-forecast-temperature-max"> 18° </span>
+                  <span class="weather-forecast-temperature-min"> 12° </span>
+                </div>
+              </div>
             </div>
           </div>
         </div>
       </div>
-      <small
-        ><a href="https://github.com/sabamohaghegh/Weather_App" target="_blank"
-          >Open-source code</a
-        >, by Saba Mohaghegh</small
-      >
     </div>
+
+    <small
+      ><a href="https://github.com/sabamohaghegh/Weather_App" target="_blank"
+        >Open-source code</a
+      >, by Saba Mohaghegh</small
+    >
 
     <script src="src/java2.js"></script>
   </body>
