Completed forecast using API, omitted the unit conversion

--- a/index.html
+++ b/index.html
@@ -45,13 +45,7 @@
         <h1>
           <span class="icon"> <img src="" alt="" id="icon-h1" /></span
           ><span class="h1" id="h1-heading"></span>
-          <span class="units">
-            <a href="#" id="celsius" class="active">°C</a>|<a
-              href="#"
-              id="fahrenheit"
-              >°F</a
-            >
-          </span>
+          <span class="units"> °C </span>
         </h1>
         <br />
         <div class="info">
